Fixing single line code block on firefox

--- a/web/sass-files/sass/partials/_markdown.scss
+++ b/web/sass-files/sass/partials/_markdown.scss
@@ -54,6 +54,13 @@
 	code {
 		white-space: pre;
 	}
+	pre {
+		&.text-nowrap {
+			code {
+				white-space: nowrap;
+			}
+		}
+	}
 }
 .markdown__table {
 	background: #fff;
